--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ section h2::after {
 
     <section id="quote">
       <h2><i class="fas fa-quote-left"></i> Favorite Quote</h2>
-      <p class="quote">"Code is like humor. When you have to explain it, it’s bad."</p>
+      <p class="quote">"If you run out of options, just make a new one."</p>
     </section>
 
     <section id="contact" class="contact">
@@ -504,4 +504,5 @@ section h2::after {
 
 </body>
 </html>
+
 
