--- a/index.html
+++ b/index.html
@@ -395,6 +395,7 @@ section h2::after {
 #about p {
   font-size: 1.2rem; /* try 1.1rem or 1.2rem for bigger text */
   line-height: 1.6; /* makes it more readable */
+  text-align: justify;
 }
 
   </style>
@@ -443,7 +444,7 @@ section h2::after {
       <ul>
         <li>HTML</li>
         <li>CSS</li>
-        <li>Java</li>
+        <li>JAVA</li>
         <li>SQL</li>
         <li>PYTHON</li>
       </ul>
@@ -504,5 +505,6 @@ section h2::after {
 
 </body>
 </html>
+
 
 
