--- a/index.html
+++ b/index.html
@@ -396,6 +396,7 @@ section h2::after {
   font-size: 1.2rem; /* try 1.1rem or 1.2rem for bigger text */
   line-height: 1.6; /* makes it more readable */
   text-align: justify;
+  font-style: tahoma;
 }
 
   </style>
@@ -505,6 +506,7 @@ section h2::after {
 
 </body>
 </html>
+
 
 
 
