--- a/index.html
+++ b/index.html
@@ -393,10 +393,10 @@ section h2::after {
   font-weight: 500;
 }
 #about p {
+  text-align: justify;
+  font-style: italic;
   font-size: 1.2rem; /* try 1.1rem or 1.2rem for bigger text */
   line-height: 1.6; /* makes it more readable */
-  text-align: justify;
-  font-style: tahoma;
 }
 
   </style>
@@ -506,6 +506,7 @@ section h2::after {
 
 </body>
 </html>
+
 
 
 
