--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ section h2::after {
 }
 #about p {
   text-align: right;
-  font-style: serif;
+  font-style: sans-serif;
   font-size: 1.2rem; /* try 1.1rem or 1.2rem for bigger text */
   line-height: 1.6; /* makes it more readable */
 }
@@ -506,6 +506,7 @@ section h2::after {
 
 </body>
 </html>
+
 
 
 
