--- a/index.html
+++ b/index.html
@@ -393,8 +393,8 @@ section h2::after {
   font-weight: 500;
 }
 #about p {
-  text-align: right;
-  font-style: sans-serif;
+  text-align: center;
+  font-style: Arial;
   font-size: 1.2rem; /* try 1.1rem or 1.2rem for bigger text */
   line-height: 1.6; /* makes it more readable */
 }
@@ -506,6 +506,7 @@ section h2::after {
 
 </body>
 </html>
+
 
 
 
