--- a/index.html
+++ b/index.html
@@ -393,8 +393,9 @@ section h2::after {
   font-weight: 500;
 }
 #about p {
-  text-align: center;
+  text-align: left;
   font-style: Arial;
+  word-spacing: normal;
   font-size: 1.2rem; /* try 1.1rem or 1.2rem for bigger text */
   line-height: 1.6; /* makes it more readable */
 }
@@ -506,6 +507,7 @@ section h2::after {
 
 </body>
 </html>
+
 
 
 
