--- a/index.html
+++ b/index.html
@@ -394,10 +394,10 @@ section h2::after {
 }
 #about p {
   text-align: left;
-  font-style: Arial;
+  font-family: 'Lato', sans-serif;
   word-spacing: normal;
-  font-size: 1.2rem; /* try 1.1rem or 1.2rem for bigger text */
-  line-height: 1.6; /* makes it more readable */
+  font-size: 1.1rem; /* try 1.1rem or 1.2rem for bigger text */
+  line-height: 1.4; /* makes it more readable */
 }
 
   </style>
@@ -507,6 +507,7 @@ section h2::after {
 
 </body>
 </html>
+
 
 
 
