--- a/index.html
+++ b/index.html
@@ -394,10 +394,9 @@ section h2::after {
 }
 #about p {
   text-align: left;
-  font-family: 'Lato', sans-serif;
-  word-spacing: normal;
-  font-size: 1.1rem; /* try 1.1rem or 1.2rem for bigger text */
-  line-height: 1.4; /* makes it more readable */
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.2rem; /* try 1.1rem or 1.2rem for bigger text */
+  line-height: 1.5; /* makes it more readable */
 }
 
   </style>
@@ -507,6 +506,7 @@ section h2::after {
 
 </body>
 </html>
+
 
 
 
